Fix mobile header buttons alignment

--- a/src/index.css
+++ b/src/index.css
@@ -34,10 +34,22 @@ h2 {
 }
 
 
+
 .headerDiv {
   flex-grow: 1;
   text-align: center;
 }
+#header-links {
+  border-radius: 10px;
+  padding: 60px 0 60px 0;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  justify-content: space-evenly;
+  margin-right: 80px;
+}
+
+
 
 #headshot {
   object-fit: cover;
@@ -71,6 +83,10 @@ h2 {
     justify-content: center;
     gap: 12px;
     padding: 20px 0;
+    width: 100%;
+  }
+  #header-links .link {
+    display: block;
     width: 100%;
   }
   .project-container {
@@ -209,14 +225,4 @@ h2 {
   flex-wrap: wrap;
   margin-bottom: 20px;
   width: 360px;
-}
-
-#header-links {
-  border-radius: 10px;
-  padding: 60px 0 60px 0;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  justify-content: space-evenly;
-  margin-right: 80px;
 }
